# spoticker

./: .gitignore  package.json  railway.toml  vercel.json
.github/workflows/: scrape-aws.yml  scrape-azure-eviction.yml  scrape-azure.yml  scrape-coreweave.yml  scrape-gcp.yml  scrape-nebius.yml  scrape-runpod.yml  scrape-vast.yml
aws/: fetch_spot.py  ingest_gbrain.py  scraper.py
aws/cloudformation/: spoticker-role.yaml  spotticker-role.yaml
aws/iam/: README.md  github-actions-scraper-policy.json  spotticker-assume-role-policy.json
azure/: fetch_spot.py  scraper.py
azure/migrations/: 001_add_ondemand_price.sql
azure/telemetry/: agent.py  cloud_init.sh  provision.py  respawner.py
coreweave/: fetch_spot.py  scraper.py
gcp/: fetch_spot.py  scraper.py
mcp/: .env.example  app  pyproject.toml  run_server.sh
mcp/spoticker_mcp/: server.py
nebius/: fetch_spot.py  scraper.py
plan/: .env.example  Dockerfile  eval.py  requirements.txt
plan/app/: main.py  pipeline.py  schemas.py
runpod/: fetch_spot.py  scraper.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260512224605_create_spot_tables.sql  20260512225158_create_azure_spot_tables.sql  20260513033240_create_gcp_spot_tables.sql  20260515204845_create_matrix_rpcs.sql  20260516025528_create_aws_connections.sql  20260516035556_create_telemetry_tables.sql  20260516120000_secure_aws_connections.sql  20260517000000_fix_azure_eviction_rpc.sql  (+16 more)
ui/: next.config.ts  package-lock.json  package.json  proxy.ts
ui/app/: globals.css  (+3 more)
vast/: fetch_spot.py  scraper.py
(+72 files in other folders)
