[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spoticker-mcp"
version = "0.1.0"
description = "MCP server for GPU spot price intelligence and workload placement analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "anthropic>=0.28.0",
    "supabase>=2.5.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "dockerfile-parse>=2.0.0",
    "ruamel.yaml>=0.18.0",
    "python-hcl2>=4.3.0",
    "boto3>=1.34.0",
]

[project.scripts]
spoticker-mcp = "spoticker_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["spoticker_mcp", "app"]
